cmake_minimum_required(VERSION 3.23)
project(qau_cs121_summer_2022)

set(CMAKE_CXX_STANDARD 14)

#add_executable(qau_cs121_summer_2022 2022-08-01-quiz-01/main.cpp)

#add_executable(qau_cs121_summer_2022 2022-08-04-quiz-02/main.cpp)

#add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-01.cpp)
#add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-02.cpp)
#add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-03.cpp)
#add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-04.cpp)
#add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-05.cpp)
add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-06.cpp)
